# ivargas_computer_architecture_1_2022

proyecto_1/: .gitignore  Cargo.toml  README.md
proyecto_1/.cargo/: config.toml
proyecto_1/C/: bilineal.c
proyecto_1/diseño/: custom-template.tex  diagramas.drawio  diseño.md
proyecto_1/src/: bil_interpol.S  interpolation.rs  main.rs  utils.rs
