[package]
name = "rasm_interpolation"
version = "0.0.1"
edition = "2021"
authors = ["Ignacio Vargas <ignacio.vargas@estudiantec.cr>"]
description = "School project for ~3x zooming onto a square in an input image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
winit = "0.27"
softbuffer = "0.1"
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
